@@ -835,6 +835,9 @@ initpycurl(void)
 #if LIBCURL_VERSION_NUM >= 0x071500 /* check for 7.21.0 or greater */
     insint_c(d, "WILDCARDMATCH", CURLOPT_WILDCARDMATCH);
 #endif
+#if LIBCURL_VERSION_NUM >= 0x072800 /* check for 7.40.0 or greater */
+    insint_c(d, "UNIX_SOCKET_PATH", CURLOPT_UNIX_SOCKET_PATH);
+#endif
 
     insint_m(d, "M_TIMERFUNCTION", CURLMOPT_TIMERFUNCTION);
     insint_m(d, "M_SOCKETFUNCTION", CURLMOPT_SOCKETFUNCTION);
